# JARVIS

./: .gitignore  README.md  pyproject.toml
src/: main.py  server.json
src/jarvis/: __init__.py  server.py
src/jarvis/cli_api/: cli_view.py
src/jarvis/core/: __init__.py
src/jarvis/stt_api/: __init__.py  stt_view.py
src/jarvis/view/: __init__.py
src/jarvis/view/cli_api/: __init__.py  cli_view.py  help_text.py
src/jarvis/view/stt_api/: stt_view.py
src/source/: cli.py  cli_config.json  comand_line.py
src/source/cli/: cli.py
src/source/stt/: stt.py  stt_config.json
