[project]
name = "jarvis"
version = "0.1.0"
description = ""
authors = [
    {name = "Anton Golubchikov",email = "anton1programmist@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "openai-whisper (>=20250625,<20250626)",
    "pyaudio (>=0.2.14,<0.3.0)",
    "vosk (>=0.3.45,<0.4.0)",
    "sounddevice (>=0.5.2,<0.6.0)",
    "openai (>=1.100.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "jarvis", from = "src"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.12.9"
mypy = "^1.17.1"


[tool.poetry.group.type.dependencies]
types-requests = "^2.32.4.20250809"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# Ruff configuration

[tool.ruff]
line-length = 100

target-version = "py312"

[tool.ruff.lint]
# See list of rules at: https://docs.astral.sh/ruff/rules/
select = ["F", "E", "W", "I", "B", "N", "D", "PT", "PYI", "RET", "RUF"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.lint.pydocstyle]
convention = "numpy"

# Mypy configuration

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
